--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dartz: ^0.10.1
   mocktail: ^0.3.0
   flutter_secure_storage: ^5.0.2
+  faker: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
