--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   mocktail: ^0.3.0
   flutter_secure_storage: ^5.0.2
   faker: ^2.0.0
+  flutter_bloc: ^8.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_modular: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  bloc_test: ^9.0.3
+  modular_test: ^1.0.1+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
